--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 #root {
   padding: 0;
   margin: 0;
+  font-family: 'Montserrat', sans-serif;
 }
 
 
@@ -15,24 +16,36 @@
 
 .wallpaper-a {
   position: absolute;
-  top: 10px;
-  left: 10px;
+  top: 20px;
+  left: 20px;
   z-index: 10;
   color: white;
+  font-size: 18px;
 }
 
 .wallpaper-b {
   position: absolute;
-  top: 10px;
-  left: 40px;
+  top: 60px;
+  left: 20px;
   z-index: 10;
   color: white;
+  font-size: 18px;
 }
 
 .wallpaper-c {
   position: absolute;
-  top: 10px;
-  left: 70px;
+  top: 100px;
+  left: 20px;
   z-index: 10;
   color: white;
+  font-size: 18px;
+}
+
+.instructions {
+  position: absolute;
+  bottom: 20px;
+  left: 20px;
+  z-index: 10;
+  color: white;
+  font-size: 18px;
 }
