--- a/src/App.css
+++ b/src/App.css
@@ -60,3 +60,12 @@ button:focus-visible {
   color: white;
   font-size: 18px;
 }
+
+.tiles-container {
+  width: 100%;
+  height: 100%;
+  background-image: url('/assets/images/paint-02.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+}
