--- a/src/App.css
+++ b/src/App.css
@@ -64,7 +64,7 @@ button:focus-visible {
 .tiles-container {
   width: 100%;
   height: 100%;
-  background-image: url('/assets/images/paint-02.jpg');
+  background-image: url('/assets/images/buddha-02.jpg');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
