--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,7 @@ button {
   padding: 0;
   cursor: pointer;
   border-radius: 0;
+  color: white;
 }
 
 button:focus {
@@ -39,16 +40,39 @@ button:focus-visible {
   gap: 16px;
 }
 
+.buttons-container {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .button {
   padding: 8px 32px;
-  border-radius: 8px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 8px;
+  border-bottom-right-radius: 8px;
+  border-bottom-left-radius: 0;
   background-color: rgba(255, 255, 255, 0.2);
   backdrop-filter: blur(10px);
   color: white;
   font-size: 18px;
+  text-decoration: none;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.3);
+    color: white;
+  }
+
+  &:visited {
+    color: white;
+  }
+
+  &:link {
+    color: white;
   }
 }
 
