--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,13 @@ body {
   place-items: center;
   min-width: 320px;
   min-height: 100vh;
+  overflow: hidden;
+}
+
+canvas {
+  user-select: none;
+  -webkit-user-drag: none;
+  touch-action: none;
 }
 
 h1 {
